--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,15 @@ header {
     border: 1px solid #f3f3f3;
     border-radius: 10px;
     padding: 0 15px;
+    position: relative;
+
+    .clear {
+        position: absolute;
+        right: 13px;
+        width: 18px;
+        height: 18px;
+        top: 13px;
+    }
 
     input {
         border: 0;
@@ -64,11 +73,13 @@ header {
     flex-direction: column;
     position: absolute;
     width: 420px;
-    height: 200%;
+    height: 100%;
     right: 0;
     background: #ffffff;
     box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
     padding: 30px;
+    // transform: translateX(100%);
+    // transition: transform 0.3s ease-out;
 
     .items {
         flex: 1;
@@ -80,6 +91,34 @@ header {
         margin: 0;
     }
 }
+
+.cartEmpty {
+    text-align: center;
+  
+    p {
+      width: 280px;
+      line-height: 24px;
+    }
+  
+    .greenButton {
+      width: 245px;
+      margin-top: 20px;
+  
+      &:hover {
+        img {
+          transform: rotate(180deg) translateX(3px);
+        }
+      }
+  
+      img {
+        position: relative;
+        top: 1px;
+        transform: rotate(180deg);
+        margin-right: 15px;
+        transition: transform 0.15s ease-in-out;
+      }
+    }
+  }
 
 .cartTotalBlock {
     ul {
