--- a/src/index.scss
+++ b/src/index.scss
@@ -144,6 +144,10 @@ header {
     .greenButton {
         position: relative;
 
+        &:disabled {
+            animation: button-loading 0.2s ease-in-out;
+        }
+
         &:hover {
 
             img {
@@ -155,7 +159,7 @@ header {
             position: absolute;
             right: 30px;
             top: 20px;
-            transition: transform 0.2s ease-in-out;
+            transition: transform 0.6s ease-in-out infinite;
         }
     }
 }
@@ -171,6 +175,12 @@ header {
     font-weight: 500;
     cursor: pointer;
     transition: background 0.2s ease-in-out;
+
+    
+    &:disabled {
+        background-color: #bebebe !important;
+        cursor: default;
+    }
 
     &:hover {
         background: lighten(#9dd558, 5%);
@@ -213,5 +223,17 @@ header {
         &:hover {
             opacity: 1;
         }
+    }
+}
+
+@keyframes button-loading {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.7;
+    }
+    100% {
+        opacity: 1;
     }
 }
