--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ body {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
     border-radius: 20px;
     max-width: 1080px;
-    min-width: 350px;
+    min-width: 351px;
     margin: 50px auto;
     @media screen and (max-width: 555px) {
         margin: 20px auto;
@@ -23,6 +23,7 @@ body {
 
 header {
     border-bottom: 1px solid #eaeaea;
+    padding: 40px;
 
     img {
         margin-right: 15px;
@@ -39,11 +40,22 @@ header {
         }
     }
 
+    @media screen and (max-width: 555px) {
+        padding: 20px;
+    }
+
 }
 
 .content {
+
     h1 {
         margin: 0;
+    }
+
+    .content-inner {
+        @media screen and (max-width: 580px) {
+            justify-content: center;
+        }
     }
 }
 
@@ -52,7 +64,7 @@ header {
     border-radius: 10px;
     padding: 0 15px;
     position: relative;
-    @media screen and (max-width: 566px) {
+    @media screen and (max-width: 567px) {
         margin-top: 20px;
     }
 
